# arepa

./: .clang-format  CMakeLists.txt  LICENSE
include/: Attribute.h  Buffer.h  BufferBuilder.h  Shader.h  ShaderFactory.h  Timer.h  Transformation.h
include/arepa/: Attribute.h  Buffer.h  BufferBuilder.h  Common.h  FileReader.h  Framebuffer.h  HalfEdgeMesh.h  Math.h  Matrix.h  Mesh.h  MeshLoader.h  Program.h  Shader.h  ShaderFactory.h  Texture.h  Timer.h  Transformation.h  Vector.h
samples/: CMakeLists.txt  Main.cpp  SampleGBuffer.cpp  SampleHalfEdge.cpp  SampleMain1.cpp  SampleMain2.cpp  SampleMeshNormals.cpp
shaders/: color_fs.glsl  depth_fs.glsl  gbuffer_vs.glsl  normals_vs.glsl  screen_fs.glsl  screen_vs.glsl  vs.glsl
src/: Buffer.cpp  BufferBuilder.cpp  FileReader.cpp  Framebuffer.cpp  Main.cpp  MeshLoader.cpp  Program.cpp  Shader.cpp  Texture.cpp  Timer.cpp
